# coil-core

./: LICENSE  README.md  coil-core.nix  default.nix
docs/: audio.md  basic.md  data.md  graphics.md  math.md  platform.md  text.md
pkgs/: libdatachannel.nix  libgav1.nix  libjuice.nix  libsquish.nix  libsrtp.nix  libwebm.nix  plog.nix  windows-pkgs.nix
src/: asset_geometry.hpp  asset_gltf_import.hpp  asset_mesh.hpp  base.cpp  base.hpp  data.cpp  data.hpp  debug.hpp  entrypoint.cpp  entrypoint.hpp  fs.cpp  fs.hpp  graphics.cpp  graphics.hpp  graphics_format.cpp  graphics_format.hpp  graphics_gltf.cpp  graphics_gltf.hpp  graphics_shaders.cpp  graphics_shaders.hpp  input.cpp  input.hpp  json.hpp  math.hpp  math_geometry.hpp  platform.cpp  platform.hpp  render.cpp  render.hpp  sdl.cpp  sdl.hpp  sdl_vulkan.cpp  spirv.cpp  spirv.hpp  utf8.hpp  vulkan.cpp  vulkan.hpp  vulkan_format.cpp  vulkan_objects.hpp
src/coil/: CMakeLists.txt  Config.cmake.in  appidentity.cpp  appidentity.cppm  appidentity.hpp  asset_gltf.cpp  asset_gltf.hpp  asset_gltf_cache.hpp  asset_gltf_import.hpp  asset_mesh.hpp  asset_struct.hpp  assets.cppm  assets.hpp  assets_struct.hpp  assets_structs.cpp  assets_structs.cppm  audio.cpp  audio.cppm  audio.hpp  audio_soft.cpp  audio_soft.cppm  audio_soft.hpp  av1.cpp  av1.cppm  av1.hpp  base.cpp  base.cppm  base.hpp  base_debug.cpp  base_debug.cppm  base_debug.hpp  base_events.cppm  base_events_map.cppm  base_generator.cppm  base_meta.hpp  base_ptr.cppm  base_signals.cppm  base_util.cppm  component.cppm  compress_zstd.cpp  (+221 more)
src/coil/cmake/: FindMbedTLS.cmake  FindOgg.cmake  FindOpus.cmake  FindPulseAudio.cmake  FindSquish.cmake  FindSteam.cmake  FindWebm.cmake  Findharfbuzz.cmake  Findlibgav1.cmake  deps.cmake
src/coil/examples/: example_assets.json  example_native_player_input_mapping.json  example_render_gradient.cpp  example_steam.cpp  example_vulkan_compute.cpp
